bluec-tests/tests/valid/typedef/redeclare.c
int main(void) {
    typedef int foo;
    typedef int foo;
    foo x = 5;
    return x;
}
