bluec-tests/tests/invalid/typedef/syntax2.c
int main(void) {
    int * MyPtr typedef;
}